syntax = "proto3";

import "google/protobuf/empty.proto";

package bfa_protection;
option go_package = "github.com/cheef/hw-final-project/pkg/server/grpc/bfa_protection";

service BFAProtection {
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
  rpc FlushBucket(FlushBucketRequest) returns (google.protobuf.Empty) {};
  rpc BlacklistAdd(CIDRRequest) returns (google.protobuf.Empty) {};
  rpc BlacklistRemove(CIDRRequest) returns (google.protobuf.Empty) {};
  rpc WhitelistAdd(CIDRRequest) returns (google.protobuf.Empty) {};
  rpc WhitelistRemove(CIDRRequest) returns (google.protobuf.Empty) {};
}

message AuthorizeRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AuthorizeResponse {
  bool ok = 1;
}

message FlushBucketRequest {
  string login = 1;
  string ip = 2;
}

message CIDRRequest {
  string cidr = 1;
}